--- a/package.json
+++ b/package.json
@@ -6,23 +6,29 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "analytics-node": "^3.3.0",
+    "bcrypt": "^3.0.2",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.13.3",
+    "bootstrap": "^4.1.3",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.2.0",
-    "cookie-parser": "~1.3.5",
-    "csurf": "^1.8.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.3.5",
+    "csurf": "^1.9.0",
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.13.0",
-    "express-validator": "^2.20.5",
-    "hbs": "~3.1.0",
-    "mongoose": "^4.4.16",
-    "morgan": "~1.6.1",
+    "express-session": "^1.15.6",
+    "express-validator": "^2.21.0",
+    "hbs": "^3.1.1",
+    "jquery": "^3.3.1",
+    "mongo-connect": "0.0.6",
+    "mongoose": "^4.13.17",
+    "morgan": "^1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0",
-    "stripe": "^4.7.0"
+    "popper": "^1.0.1",
+    "serve-favicon": "^2.3.2",
+    "stripe": "^4.25.0"
   }
 }
