--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "cookie-parser": "^1.3.5",
     "csurf": "^1.9.0",
     "debug": "^2.2.0",
+    "dotenv": "^6.2.0",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-validator": "^2.21.0",
+    "googleapis": "^36.0.0",
     "hbs": "^3.1.1",
     "jquery": "^3.3.1",
     "mongo-connect": "0.0.6",
     "mongoose": "^4.13.17",
     "morgan": "^1.6.1",
+    "nodemailer": "^4.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "popper": "^1.0.1",
